Fix for bug 28950. Header values in nsHeaderEntry are now CString instead of the nsString.